--- a/rag_service/requirements.txt
+++ b/rag_service/requirements.txt
@@ -145,6 +145,7 @@ starlette==0.45.3
 sympy==1.13.1
 tenacity==9.1.2
 threadpoolctl==3.6.0
+tiktoken==0.9.0
 tokenizers==0.21.1
 torch==2.6.0
 tqdm==4.67.1
