--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,8 @@
-# Logs
 logs
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
-
 node_modules
 dist-ssr
 *.local
 
-# Editor directories and files
 .vscode/*
 !.vscode/extensions.json
 .idea
@@ -22,54 +13,18 @@ dist-ssr
 *.sln
 *.sw?
 *.zip
-
 .env
 venv/
 __pycache__/
 *.pdf
 config/
 indexHistory/
-
-# See https://docs.github.com/get-started/getting-started-with-git/ignoring-files for more about ignoring files.
-
-# Compiled output
 dist
 /tmp
 /out-tsc
 /bazel-out
 
-# Node
-node_modules
 npm-debug.log
 yarn-error.log
+.angular
 
-# IDEs and editors
-.idea/
-.project
-.classpath
-.c9/
-*.launch
-.settings/
-*.sublime-workspace
-
-# Visual Studio Code
-.vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
-.history/*
-
-# Miscellaneous
-.angular/
-.angular/cache
-.sass-cache/
-/connect.lock
-/coverage
-/libpeerconnection.log
-testem.log
-/typings
-
-# System files
-.DS_Store
-Thumbs.db
