--- a/.gitignore
+++ b/.gitignore
@@ -19,7 +19,9 @@ __pycache__/
 *.pdf
 config/
 indexHistory/
-dist
+chatbot-ui/dist/chatbot-ui/browser/favicon.ico
+chatbot-ui/dist/chatbot-ui/3rdpartylicenses.txt
+chatbot-ui/dist/chatbot-ui/prerendered-routes.json
 /tmp
 /out-tsc
 /bazel-out
