Add Requirements and Docker Modifications

--- a/rag_service/.env.template
+++ b/rag_service/.env.template
@@ -1,4 +1,6 @@
-OPENAI_API_KEY="YOUR_API_KEY"
-MODEL="MODEL_NAME"
-REDIS_HOST="REDIS_DEPLOYEMENT_URL"
-REDIS_PORT="REDIS_DEPLOYEMENT_PORT"
+OPENAI_API_KEY="API KEY"
+MODEL="MODEL NAME"
+REDIS_HOST="REDIS DEPLOYEMENT URL"
+REDIS_PORT="REDIS DEPLOYEMENT PORT"
+API_HOST="API HOST URL"
+API_PORT="API PORT"
