--- a/rag_service/requirements.txt
+++ b/rag_service/requirements.txt
@@ -122,6 +122,7 @@ pyxnat==1.6.3
 PyYAML==6.0.2
 rank-bm25==0.2.2
 rdflib==6.3.2
+redis==5.0.1
 referencing==0.36.2
 regex==2024.11.6
 requests==2.32.3
